--- a/next-episode-modal/styles.css
+++ b/next-episode-modal/styles.css
@@ -26,7 +26,7 @@ body {
   font-family: Archive, sans-serif;
 }
 
-.modal {
+.nextEpisodeModal {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +39,7 @@ body {
   background-color: rgba(47, 47, 51, 0.90);
 }
 
-.modal_content {
+.nextEpisodeModal_content {
   background: url("./images/background_next.png") no-repeat;
   background-size: cover;
   padding: 0 20px;
@@ -69,7 +69,7 @@ body {
   color: #FF79FA;
 }
 
-.modal_content__text {
+.nextEpisodeModal_content__text {
   width: 277px;
   display: flex;
   flex-direction: column;
@@ -156,10 +156,8 @@ body {
 }
 
 @media screen and (max-width: 560px) {
-  .modal_content {
+  .nextEpisodeModal_content {
     width: 95%;
-  }
-  .modal_content__text {
   }
   .telegram_btn {
     width: 267px;
